# enkei

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix  notes.txt  rustfmt.toml  shell.nix
.github/workflows/: rust.yml
nix/: default.nix  hm-module.nix
src/: board.rs  item.rs  lib.rs  main.rs
src/app/: cli.rs  impl_self.rs  impl_view.rs  mod.rs  themes.rs
src/tui/: mod.rs
