[package]
name = "enkei"
version = "0.1.0"
authors = ["comfysage", "isabelroses"]
license = "MIT"
description = "scriptable, curses-based, project tracker"
readme = "README.md"
homepage = "https://github.com/catgardens/enkei"
repository = "https://github.com/catgardens/enkei"
keywords = ["cli"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = [ "derive" ] }
clap_complete = "4.5.5"
crossterm = "0.27.0"
directories = "5.0.1"
log = "0.4.21"
serde = { version = "1.0.203", features = ["serde_derive"] }
serde_json = "1.0.117"

[dependencies.cursive]
version = "0.20.0"
default-features = false
features = ["crossterm-backend", "toml"]

[dependencies.saku_logger]
git = "https://github.com/comfysage/saku"
subfolder = "log"

[lints.clippy]
all = "warn"
pedantic = "warn"
