[package]
name = "enkei"
version = "0.1.0"
authors = ["comfysage", "isabelroses"]
license = "MIT"
description = "scriptable, curses-based, project tracker"
readme = "README.md"
homepage = "https://github.com/catgardens/enkei"
repository = "https://github.com/catgardens/enkei"
keywords = ["cli"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.11", features = [ "derive" ] }
clap_complete = "4.5.11"
crossterm = "0.27.0"
directories = "5.0.1"
log = "0.4.22"
serde = { version = "1.0.204", features = ["serde_derive"] }
serde_json = "1.0.121"

[dependencies.cursive]
version = "0.20.0"
default-features = false
features = ["crossterm-backend", "toml"]

[dependencies.saku_logger]
git = "https://github.com/comfysage/saku"
subfolder = "log"

[lints.clippy]
all = "warn"
pedantic = "warn"
